fixed some issues within my 1200 media and fixed spacing in the footer

--- a/src/assets/Normalize.css
+++ b/src/assets/Normalize.css
@@ -119,8 +119,12 @@ a {
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
-  color: #4caf50;
+  color: var(--card-title);
   letter-spacing: 1.5px;
+  text-decoration: none;
+}
+a:hover {
+  color: #18ffff;
 }
 
 /**
